Image Capture: fill in PhotoCapabilities.{height,width} in Linux/CrOs/Mac

This CL wires the GetPhotoCapabibilities() method for Mac and fills in
the only available capability, the photo resolution, which is equal to
the "live" capture resolution.

This CL also fills in the Linux/CrOs capture reoslution as the only
supported PhotoCapabilities.{height,width}.

BUG=721478

Review-Url: https://codereview.chromium.org/2868393004
Cr-Commit-Position: refs/heads/master@{#471128}

Former-commit-id: 68edd5fc2eb0f6ccdf0680870f89471f5e5ecfa4